gap fix

--- a/src/Components/Footer/Footer.css
+++ b/src/Components/Footer/Footer.css
@@ -225,14 +225,15 @@ box-shadow: 0 10px 30px rgba(249, 115, 22, 0.4);
 @media (max-width:768px){
 
     .footer{
-        margin:  40px 20px 10px 20px;
-        gap: 10px;
+        margin:  30px 20px;
+        gap: 15px;
+        padding: 30px 0;
     }
 
     .footer-top{
         flex-direction: column;
         align-items: flex-start;
-        gap: 30px;
+        gap: 20px;
     }
 
     .footer-top-left p{
@@ -279,7 +280,7 @@ box-shadow: 0 10px 30px rgba(249, 115, 22, 0.4);
     .footer-bottom{
         flex-direction: column;
         align-items: flex-start;
-        gap: 5px;
+        gap: 6px;
     }
 
     .footer-bottom-right{
@@ -299,6 +300,9 @@ box-shadow: 0 10px 30px rgba(249, 115, 22, 0.4);
     .anchor-link{
         font-size: 16px;
     }
+    .footer hr{
+    margin: 10px 0;   /* divider gap kam */
+}
 
 }
 
